# numera

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: constants.rs  evaluator.rs  functions.rs  history.rs  lib.rs  main.rs  math.rs  settings.rs  tokenizer.rs
src/gui/: about.rs  editor.rs  keypad.rs  menu_bar.rs  mod.rs  panels.rs  result_display.rs  status_bar.rs  theme.rs
src/resources/: icon.icns
